	* gm2/gm2-gcc/rtegraph.h:  re-written to keep data
          structures hidden inside rtegraph.c.
	* gm2/plugin/m2rte.c:  re-written to use the new interface
          presented by rtegraph.h.
	* gm2/gm2-gcc/rtegraph.c:  changed all .length calls to
          vec_safe_length.  Disabled debugging output.
	* gm2/plugin/m2rte.c:  removed short circuit return.

2019-07-10      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/plugin/m2rte.c:  (code substantially rewritten and
          tidied up).  Plugin runs per gimple function and also
          after all functions have been processed.
	* gm2/rtegraph.c:  (code substantially rewritten).
	* gm2/rtegraph.h:  (rtenode::func_decl) removed.
          (rtenode::is_call) added.  (rtenode::rtenode) removed
          tree and gimple variants and replaced with a three
          parameter version.  (rtenode::dump_vec) added.
          (rtenode::lookup) deleted and replaced with a three
          parameter version.
	* gm2/plugin/m2rte.c:  removed superfluous comment.
	* gm2/Make-lang.in:  (gm2.common-install) removed gm2m
          from being installed in bin and rewritten the install
          shell script.  Tools are installed without transformed
          names into libexecsubdir.  Compiler is installed with
	  transformed name into bin.

2019-07-09      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  added many dependancies to many targets
          to allow parallel builds to complete.  (gm2/rtegraph.o)
          New rule.
	* gm2/rtegraph.h:  New file.
	* gm2/rtegraph.c:  New file.
	* gm2/plugin/m2rte.c:  rewritten to generate a call tree from
          initial basic blocks.  Temporarily disabled.
	* gm2/gm2-compiler/M2GenGCC.mod:  corrected scope string
          of the runtime exception.
	* gm2/gm2-lang.c:  include rtegraph.h.
	* gm2/mc-boot:  (mc rebuilt).
	* gm2/mc/keyc.mod:  (initMacros) added time to the avoid list.
	* gm2/plugin/m2rte.c:  improved the development debugging
          prints.