@@ -271,6 +271,7 @@ pass_warn_exception_inevitable::execute (function *fun)
 void analyse_graph (void *gcc_data, void *user_data)
 {
   rtegraph_discover ();
+  rtegraph_finish ();
 }
 
 } // anon namespace
