@@ -23,12 +23,12 @@ if $tracelevel then {
 load_lib gm2-torture.exp
 
 set TORTURE_OPTIONS [list \
-			 { -O2 } \
-			 { -O2 -g } \
-			 { -O3 } \
-		         { -O3 -g } ]
+			 { -O2 -fsoft-check-all } \
+			 { -O2 -g -fsoft-check-all } \
+			 { -O3 -fsoft-check-all } \
+		         { -O3 -g -fsoft-check-all } ]
 
-gm2_init_iso "${srcdir}/gm2/switches/check-all/plugin/fail" -fsoft-check-all
+gm2_init_iso "${srcdir}/gm2/switches/check-all/plugin/fail"
 
 foreach testcase [lsort [glob -nocomplain $srcdir/$subdir/*.mod]] {
     # If we're only testing specific files and this isn't one of them, skip it.
